@@ -6,3 +6,4 @@
 [Service Status - 44] Set status into incidents creation.
 [Service Status - 45] Add changelog through the project.
 [Service Status - 46] Create specific incident view.
+[Service Status - 52] Implement Laravel debugbar.
